chrome/renderer/page_load_histograms.h
@@ -6,7 +6,6 @@
 #define CHROME_RENDERER_PAGE_LOAD_HISTOGRAMS_H_
 
 #include "base/macros.h"
-#include "base/memory/weak_ptr.h"
 #include "content/public/renderer/render_view_observer.h"
 
 namespace blink {
@@ -26,7 +25,6 @@ class PageLoadHistograms : public content::RenderViewObserver {
   // RenderViewObserver implementation.
   void FrameWillClose(blink::WebFrame* frame) override;
   void ClosePage() override;
-  void DidUpdateLayout() override;
 
   // Dump all page load histograms appropriate for the given frame.
   //
@@ -49,13 +47,8 @@ class PageLoadHistograms : public content::RenderViewObserver {
   // so first_paint and first_paint_after_load can be 0.
   void Dump(blink::WebFrame* frame);
 
-  bool ShouldDump(blink::WebFrame* frame);
-  void MaybeDumpFirstLayoutHistograms();
   void LogPageLoadTime(const content::DocumentState* load_times,
                        const blink::WebDataSource* ds) const;
-
-  bool dumped_first_layout_histograms_;
-  base::WeakPtrFactory<PageLoadHistograms> weak_factory_;
 
   DISALLOW_COPY_AND_ASSIGN(PageLoadHistograms);
 };
